<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/Azul1"
    tools:context=".ui.RecuperaContrasena">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:fontFamily="@font/mogra_font"
        android:gravity="center"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="@color/crema1"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            android:textColor="@color/crema1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRecuperaContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/recupera_contrase_a"
        android:backgroundTint="@color/crema1"
        android:textColor="@color/Azul2"/>
</LinearLayout>